--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "psd2html",
-  "version": "1.0.0",
-  "description": "psd2html template",
+  "name": "src2html-template",
+  "version": "4.0.0",
+  "description": "impulsion src2html template",
   "main": "Gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lloydaarn/src2html-template.git"
+  },
+  "keywords": [
+    "psd2html",
+    "src2html",
+    "blank",
+    "template"
+  ],
+  "author": "lloydaarn",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lloydaarn/src2html-template/issues"
+  },
+  "homepage": "https://github.com/lloydaarn/src2html-template#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^4.0.0",
-    "gulp-connect": "^5.7.0",
-    "gulp-livereload": "^4.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
-    "gulp-wait": "0.0.2"
+    "autoprefixer": "^9.7.0",
+    "browser-sync": "^2.26.13",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
